# AndroMate

./: main.py  pyproject.toml
modules/: ai.py  cache.py  cli.py  context_provider.py  main.py  memory.py  prompt_manager.py  router.py  telegram_bot.py  voice.py  wake_word.py  web_dashboard.py
modules/actions/: __init__.py  communication.py  device.py  media.py  system.py  utils.py
modules/brain/: fact_extractor.py  store.py  summarizer.py
modules/static/: script.js  style.css
modules/templates/: base.txt  dashboard.html  examples.txt  tools.txt
