[project]
name = "andromate"
version = "1.0.0"
description = "Advanced AI Assistant for Android/Termux with Persistent Memory and Reasoning."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Grandpa", email = "grandpa@example.com" }
]
dependencies = [
    "requests>=2.31.0",
    "SpeechRecognition>=3.10.0",
    "colorama>=0.4.6",
    "Flask>=3.0.0",
    "pyTelegramBotAPI>=4.12.0",
    "PyAudio>=0.2.13"
]

[project.scripts]
andromate = "main:main"

[tool.setuptools]
packages = { find = { where = ["."], include = ["modules*"] } }
py-modules = ["main", "andromate"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
